@@ -1,6 +1,7 @@
 2021-10-24  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* generator: Add ".by_value" to struct arguments
+	* generator: Add struct alias hook
 
 2021-10-23  vaiorabbit  <http://twitter.com/vaiorabbit>
 
